--- a/pos-carts-service/pom.xml
+++ b/pos-carts-service/pom.xml
@@ -25,5 +25,10 @@
       <artifactId>pos-products-service</artifactId>
       <version>0.0.1-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>com.example</groupId>
+      <artifactId>pos-api</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 </project>
