--- a/pos-products-service/pom.xml
+++ b/pos-products-service/pom.xml
@@ -21,6 +21,11 @@
       <version>4.1.1</version>
     </dependency>
     <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-circuitbreaker-reactor-resilience4j</artifactId>
+      <version>3.1.1</version>
+    </dependency>
+    <dependency>
       <groupId>com.example</groupId>
       <artifactId>pos-api</artifactId>
       <version>0.0.1-SNAPSHOT</version>
