Add pos-api dependency to multiple services pom files

--- a/pom.xml
+++ b/pom.xml
@@ -48,5 +48,10 @@
             <artifactId>mapstruct</artifactId>
             <version>1.5.5.Final</version>
         </dependency>
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>pos-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
