Add Mapstruct annotation processor for mapping plugins

--- a/pos-api/src/api.yml
+++ b/pos-api/src/api.yml
@@ -232,9 +232,13 @@ components:
           type: string
         name:
           type: string
+        category:
+          type: string
         price:
           type: double
-        image:
+        quantity:
+          type: integer
+        img:
           type: string
     Products:
       type: array
