--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,7 @@ buildNumber.properties
 # Support for Project snippet scope
 
 # End of https://www.toptal.com/developers/gitignore/api/maven,intellij+all,macos,visualstudiocode
+
+.venv
+generator.ipynb
+dl-aw06
