--- a/pos-products-service/src/main/resources/application.yml
+++ b/pos-products-service/src/main/resources/application.yml
@@ -23,3 +23,5 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+  instance:
+    instance-id: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
